--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
     <link rel="stylesheet" href="css/calendar.clean-energy.css">
     <link rel="stylesheet" href="css/calendar.competitive-advantage.css">
-    <link rel="stylesheet" href="css/calendar.continuous-growth.css"> 
-    <link rel="stylesheet" href="css/calendar.coral-reef.css">   
+    <link rel="stylesheet" href="css/calendar.continuous-growth.css">
+    <link rel="stylesheet" href="css/calendar.coral-reef.css">
+    <link rel="stylesheet" href="css/calendar.cosmic-nebula.css">
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
     <link rel="stylesheet" href="css/calendar.crossroads-stone.css">
@@ -218,7 +219,8 @@
         }
 
         .container {
-            max-width: 1600px; /* Increased width for wide screens */
+            max-width: 1600px;
+            /* Increased width for wide screens */
             margin: 0 auto;
             padding: 20px;
         }
@@ -227,7 +229,8 @@
             text-align: center;
             font-family: 'Cinzel', serif;
             color: #333;
-            font-size: 2.5em; /* Larger font size for wide screens */
+            font-size: 2.5em;
+            /* Larger font size for wide screens */
         }
 
         /* Calendar Styles */
@@ -237,11 +240,14 @@
             margin-top: 20px;
         }
 
-        th, td {
-            padding: 20px; /* Increased padding for better spacing */
+        th,
+        td {
+            padding: 20px;
+            /* Increased padding for better spacing */
             text-align: center;
             border: 1px solid #ddd;
-            font-size: 1.2em; /* Larger font size for better readability */
+            font-size: 1.2em;
+            /* Larger font size for better readability */
         }
 
         th {
@@ -251,7 +257,8 @@
 
         td {
             cursor: pointer;
-            height: 100px; /* Increased cell height for better visibility */
+            height: 100px;
+            /* Increased cell height for better visibility */
         }
 
         td:hover {
@@ -279,16 +286,19 @@
 
         .modal-content {
             background-color: #fff;
-            padding: 30px; /* Increased padding for better spacing */
+            padding: 30px;
+            /* Increased padding for better spacing */
             border-radius: 10px;
-            width: 400px; /* Wider modal for better content display */
+            width: 400px;
+            /* Wider modal for better content display */
             text-align: center;
         }
 
         .close-button {
             float: right;
             cursor: pointer;
-            font-size: 28px; /* Larger close button */
+            font-size: 28px;
+            /* Larger close button */
         }
 
         /* Analog Clock Styles */
@@ -296,13 +306,16 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 30px; /* Increased margin for better spacing */
+            margin: 30px;
+            /* Increased margin for better spacing */
         }
 
         .clock-face {
-            width: 200px; /* Larger clock face */
+            width: 200px;
+            /* Larger clock face */
             height: 200px;
-            border: 12px solid #333; /* Thicker border */
+            border: 12px solid #333;
+            /* Thicker border */
             border-radius: 50%;
             position: relative;
             background-color: #fff;
@@ -310,7 +323,8 @@
 
         .hand {
             width: 50%;
-            height: 8px; /* Thicker hands */
+            height: 8px;
+            /* Thicker hands */
             background: #333;
             position: absolute;
             top: 50%;
@@ -321,42 +335,51 @@
         }
 
         .second-hand {
-            height: 4px; /* Thicker second hand */
+            height: 4px;
+            /* Thicker second hand */
             background: red;
         }
 
         .minute-hand {
-            height: 8px; /* Thicker minute hand */
+            height: 8px;
+            /* Thicker minute hand */
             background: #333;
         }
 
         .hour-hand {
             width: 40%;
             left: 10%;
-            height: 10px; /* Thicker hour hand */
+            height: 10px;
+            /* Thicker hour hand */
             background: #333;
         }
 
         /* Weather Info Styles */
         .weather-info {
-            font-size: 14px; /* Larger font size for weather info */
+            font-size: 14px;
+            /* Larger font size for weather info */
             color: #555;
-            margin-top: 10px; /* Increased margin for better spacing */
+            margin-top: 10px;
+            /* Increased margin for better spacing */
         }
 
         /* Back to Top Button */
         .back-to-top-button {
             display: none;
             position: fixed;
-            bottom: 30px; /* Increased distance from bottom */
-            right: 30px; /* Increased distance from right */
-            padding: 15px 30px; /* Larger padding for better visibility */
+            bottom: 30px;
+            /* Increased distance from bottom */
+            right: 30px;
+            /* Increased distance from right */
+            padding: 15px 30px;
+            /* Larger padding for better visibility */
             background-color: #333;
             color: #fff;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 1.1em; /* Larger font size */
+            font-size: 1.1em;
+            /* Larger font size */
         }
 
         .back-to-top-button:hover {
@@ -369,15 +392,21 @@
             margin: 20px 0;
         }
 
-        #current-date, #today-weather {
-            font-size: 1.8em; /* Bigger font size */
-            font-weight: bold; /* Bold text */
-            color: #333; /* Darker color for better visibility */
-            margin: 10px 0; /* Add some spacing */
+        #current-date,
+        #today-weather {
+            font-size: 1.8em;
+            /* Bigger font size */
+            font-weight: bold;
+            /* Bold text */
+            color: #333;
+            /* Darker color for better visibility */
+            margin: 10px 0;
+            /* Add some spacing */
         }
 
         #today-weather {
-            font-style: italic; /* Optional: Add italic style for weather */
+            font-style: italic;
+            /* Optional: Add italic style for weather */
         }
     </style>
 </head>
@@ -409,7 +438,8 @@
         </div>
 
         <div class="controls">
-            <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All Events</button>
+            <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All
+                Events</button>
             <select id="theme-switcher" aria-label="Theme Switcher">
                 <option value="abandoned-castle">Abandoned Castle</option>
                 <option value="adelaide-skyline">Adelaide's Skyline</option>
@@ -452,6 +482,7 @@
                 <option value="competitive-advantage">Competitive Advantage</option>
                 <option value="continuous-growth">Continuous Growth</option>
                 <option value="coral-reef">Coral Reef</option>
+                <option value="cosmic-nebula">Cosmic Nebula</option>
                 <option value="cracked-ice">Cracked Ice</option>
                 <option value="crimson-sky">Crimson Sky</option>
                 <option value="crossroads-stone">Crossroads Stone</option>
