--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <link rel="stylesheet" href="css/calendar.free-flight.css">
     <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
     <link rel="stylesheet" href="css/calendar.frozen-wilderness.css">
+    <link rel="stylesheet" href="css/calendar.full-pink-moon.css">
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
     <link rel="stylesheet" href="css/calendar.genghis-khan-arrow.css">
     <link rel="stylesheet" href="css/calendar.giant-petrel.css">
@@ -514,6 +515,7 @@
                 <option value="free-flight">Free Flight</option>
                 <option value="forgotten-dreams">Forgotten Dreams</option>
                 <option value="frozen-wilderness">Frozen Wilderness</option>
+                <option value="full-pink-moon">Full Pink Moon</option>
                 <option value="galactic-glow">Galactic Glow</option>
                 <option value="genghis-khan-arrow">Genghis Khan's Arrow</option>
                 <option value="giant-petrel">Giant Petrel</option>
