--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
     <link rel="stylesheet" href="css/calendar.porcupine-quill.css">
     <link rel="stylesheet" href="css/calendar.port-victoria.css">
     <link rel="stylesheet" href="css/calendar.practical-experience.css">
+    <link rel="stylesheet" href="css/calendar.precious-question.css">
     <link rel="stylesheet" href="css/calendar.pure-light.css">
     <link rel="stylesheet" href="css/calendar.purple-fog.css">
     <link rel="stylesheet" href="css/calendar.quantum-programmer.css">
@@ -587,6 +588,7 @@
                 <option value="porcupine-quill">Porcupine Quill</option>
                 <option value="port-victoria">Port Victoria</option>
                 <option value="practical-experience">Practical Experience</option>
+                <option value="precious-question">Precious Question</option>
                 <option value="pure-light">Pure Light</option>
                 <option value="purple-fog">Purple Fog</option>
                 <option value="quantum-programmer">Quantum Programmer</option>
