--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
     <link rel="stylesheet" href="css/calendar.lemongrass-sky.css">
     <link rel="stylesheet" href="css/calendar.life-quality.css">
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
+    <link rel="stylesheet" href="css/calendar.logical-intelligence.css">
     <link rel="stylesheet" href="css/calendar.love-station.css">
     <link rel="stylesheet" href="css/calendar.lucid-dream.css">
     <link rel="stylesheet" href="css/calendar.lunar-eclipse.css">
@@ -549,6 +550,7 @@
                 <option value="lemongrass-sky">Lemongrass Sky</option>
                 <option value="life-quality">Life Quality</option>
                 <option value="lions-mane">Lion's Mane</option>
+                <option value="logical-intelligence">Logical Intelligence</option>
                 <option value="love-station">Love Station</option>
                 <option value="lucid-dream">Lucid Dream</option>
                 <option value="lunar-eclipse">Lunar Eclipse</option>
