--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
     <link rel="stylesheet" href="css/calendar.technological-might.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
+    <link rel="stylesheet" href="css/calendar.time-complexity.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
     <link rel="stylesheet" href="css/calendar.velvety-dark.css">
@@ -625,6 +626,7 @@
                 <option value="tactical-command">Tactical Command</option>
                 <option value="technological-might">Technological Might</option>
                 <option value="the-last-mohican">The Last Mohican</option>
+                <option value="time-complexity">Time Complexity</option>
                 <option value="time-machine">Time Machine</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
                 <option value="velvety-dark">Velvety Dark</option>
