--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     <link rel="stylesheet" href="css/calendar.iceland-volcanoes.css">
     <link rel="stylesheet" href="css/calendar.imaginary-world.css">
     <link rel="stylesheet" href="css/calendar.in-the-dusk.css">
+    <link rel="stylesheet" href="css/calendar.intelligence-quotient.css">
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
     <link rel="stylesheet" href="css/calendar.invincible-zone.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
@@ -543,6 +544,7 @@
                 <option value="iceland-volcanoes">Iceland’s Volcanoes</option>
                 <option value="imaginary-world">Imaginary World</option>
                 <option value="in-the-dusk">In the Dusk</option>
+                <option value="intelligence-quotient">Intelligence Quotient</option>
                 <option value="into-the-night">Into the Night</option>
                 <option value="invincible-zone">Invincible Zone</option>
                 <option value="japan-emperor">Japan's Emperor</option>
