--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
     <link rel="stylesheet" href="css/calendar.rising-sun.css">
     <link rel="stylesheet" href="css/calendar.robin-good.css">
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
+    <link rel="stylesheet" href="css/calendar.samurai-path.css">
     <link rel="stylesheet" href="css/calendar.sea-diamonds.css">
     <link rel="stylesheet" href="css/calendar.sea-lions.css">
     <link rel="stylesheet" href="css/calendar.sea-star.css">
@@ -606,6 +607,7 @@
                 <option value="rising-sun">Rising Sun</option>
                 <option value="robin-good">Robin Good</option>
                 <option value="royal-caribbean">Royal Caribbean</option>
+                <option value="samurai-path">The Samurai's Path</option>
                 <option value="sea-diamonds">Sea Diamonds</option>
                 <option value="sea-lions">Sea Lions</option>
                 <option value="sea-star">Sea Star</option>
