--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
     <link rel="stylesheet" href="css/calendar.medieval-knights.css">
     <link rel="stylesheet" href="css/calendar.mediterranean-dreams.css">
     <link rel="stylesheet" href="css/calendar.melting-glaciers.css">
+    <link rel="stylesheet" href="css/calendar.midnight-alchemy.css">
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
     <link rel="stylesheet" href="css/calendar.migratory-birds.css">
     <link rel="stylesheet" href="css/calendar.monochrome-ink.css">
@@ -566,6 +567,7 @@
                 <option value="medieval-knights">Medieval Knights</option>
                 <option value="mediterranean-dreams">Mediterranean Dreams</option>
                 <option value="melting-glaciers">Melting Glaciers</option>
+                <option value="midnight-alchemy">Midnight Alchemy</option>
                 <option value="midnight-train">Midnight Train</option>
                 <option value="migratory-birds">Migratory Birds</option>
                 <option value="monochrome-ink">Monochrome Ink</option>
