--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
     <link rel="stylesheet" href="css/calendar.sky-eagle.css">
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
     <link rel="stylesheet" href="css/calendar.spring-meadow.css">
+    <link rel="stylesheet" href="css/calendar.statue-of-liberty.css">
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
     <link rel="stylesheet" href="css/calendar.strategic-advantage.css">
@@ -624,6 +625,7 @@
                 <option value="sky-eagle">Sky Eagle</option>
                 <option value="solar-flare">Solar Flare</option>
                 <option value="spring-meadow">Spring Meadow</option>
+                <option value="statue-of-liberty">Statue of Liberty</option>
                 <option value="steel-shadows">Steel Shadows</option>
                 <option value="stockholm-roofs">Stockholm Roofs</option>
                 <option value="strategic-advantage">Strategic Advantage</option>
