--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <link rel="stylesheet" href="css/calendar.distant-skies.css">
     <link rel="stylesheet" href="css/calendar.divi-divi-trees.css">
     <link rel="stylesheet" href="css/calendar.doterra-black.css">
+    <link rel="stylesheet" href="css/calendar.doterra-colors.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
@@ -507,7 +508,8 @@
                 <option value="desert-mirage">Desert Mirage</option>
                 <option value="divi-divi-trees">Divi-divi Trees</option>
                 <option value="distant-skies">Distant Skies</option>
-                <option value="doterra-black">Doterra Black</option>
+                <option value="doterra-black">doTERRA Black</option>
+                <option value="doterra-colors">doTERRA Colors</option>
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="dragonfly">Dragonfly</option>
                 <option value="emerald-stream">Emerald Stream</option>
