--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
     <link rel="stylesheet" href="css/calendar.finish-line.css">
     <link rel="stylesheet" href="css/calendar.fir-balsam.css">
     <link rel="stylesheet" href="css/calendar.flamingo-sky.css">
-    <link rel="stylesheet" href="css/calendar.free-flight.css">
     <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
+    <link rel="stylesheet" href="css/calendar.formula-one.css">
+    <link rel="stylesheet" href="css/calendar.free-flight.css">
     <link rel="stylesheet" href="css/calendar.frozen-wilderness.css">
     <link rel="stylesheet" href="css/calendar.full-pink-moon.css">
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
@@ -526,8 +527,9 @@
                 <option value="finish-line">Finish Line</option>
                 <option value="fir-balsam">Fir Balsam</option>
                 <option value="flamingo-sky">Flamingo Sky</option>
-                <option value="free-flight">Free Flight</option>
                 <option value="forgotten-dreams">Forgotten Dreams</option>
+                <option value="formula-one">Formula One</option>
+                <option value="free-flight">Free Flight</option>
                 <option value="frozen-wilderness">Frozen Wilderness</option>
                 <option value="full-pink-moon">Full Pink Moon</option>
                 <option value="galactic-glow">Galactic Glow</option>
