--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <link rel="stylesheet" href="css/calendar.golden-coast.css">
     <link rel="stylesheet" href="css/calendar.golden-gate.css">
     <link rel="stylesheet" href="css/calendar.golden-horizon.css">
-    <link rel="stylesheet" href="css/calendar.grands-prix.css">
+    <link rel="stylesheet" href="css/calendar.grand-prix.css">
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
     <link rel="stylesheet" href="css/calendar.great-wall.css">
     <link rel="stylesheet" href="css/calendar.green-city.css">
@@ -538,7 +538,7 @@
                 <option value="golden-coast">Gold Coast</option>
                 <option value="golden-gate">Golden Gate</option>
                 <option value="golden-horizon">Golden Horizon</option>
-                <option value="grands-prix">Grands Prix</option>
+                <option value="grand-prix">Grand Prix</option>
                 <option value="great-lakes">Great Lakes</option>
                 <option value="great-wall">Great Wall</option>
                 <option value="green-city">Green City</option>
