--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     <link rel="stylesheet" href="css/calendar.pure-light.css">
     <link rel="stylesheet" href="css/calendar.purple-fog.css">
     <link rel="stylesheet" href="css/calendar.quantum-programmer.css">
+    <link rel="stylesheet" href="css/calendar.queen-of-ambience.css">
     <link rel="stylesheet" href="css/calendar.quiet-evening.css">
     <link rel="stylesheet" href="css/calendar.rainbow-dream.css">
     <link rel="stylesheet" href="css/calendar.rainforest-jungle.css">
@@ -611,6 +612,7 @@
                 <option value="pure-light">Pure Light</option>
                 <option value="purple-fog">Purple Fog</option>
                 <option value="quantum-programmer">Quantum Programmer</option>
+                <option value="queen-of-ambience">Queen of Ambience</option>
                 <option value="quiet-evening">Quiet Evening</option>
                 <option value="rainbow-dream">Rainbow Dream</option>
                 <option value="rainforest-jungle">Rainforest Jungle</option>
