--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
     <link rel="stylesheet" href="css/calendar.arctic-snowfall.css">
+    <link rel="stylesheet" href="css/calendar.art-studio.css">
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
     <link rel="stylesheet" href="css/calendar.bamboo-flute.css">
     <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
@@ -465,6 +466,7 @@
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
                 <option value="arctic-glow">Arctic Glow</option>
                 <option value="arctic-snowfall">Arctic Snowfall</option>
+                <option value="art-studio">Art Studio</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
                 <option value="bamboo-flute">Bamboo Flute</option>
                 <option value="battle-of-the-ice">Battle of the Ice</option>
