--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <link rel="stylesheet" href="css/calendar.cosmic-nebula.css">
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
+    <link rel="stylesheet" href="css/calendar.critical-thinking.css">
     <link rel="stylesheet" href="css/calendar.crossroads-stone.css">
     <link rel="stylesheet" href="css/calendar.crystal-snowfall.css">
     <link rel="stylesheet" href="css/calendar.crystal-stream.css">
@@ -501,6 +502,7 @@
                 <option value="cosmic-nebula">Cosmic Nebula</option>
                 <option value="cracked-ice">Cracked Ice</option>
                 <option value="crimson-sky">Crimson Sky</option>
+                <option value="critical-thinking">Critical Thinking</option>
                 <option value="crossroads-stone">Crossroads Stone</option>
                 <option value="crystal-snowfall">Crystal Snowfall</option>
                 <option value="crystal-stream">Crystal Stream</option>
