--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
     <link rel="stylesheet" href="css/calendar.blue-whale.css">
     <link rel="stylesheet" href="css/calendar.blue-white.css">
+    <link rel="stylesheet" href="css/calendar.breaking-point.css">
     <link rel="stylesheet" href="css/calendar.bright-line.css">
     <link rel="stylesheet" href="css/calendar.bronze-horseman.css">
     <link rel="stylesheet" href="css/calendar.cacao-plantation.css">
@@ -146,6 +147,7 @@
     <link rel="stylesheet" href="css/calendar.melting-glaciers.css">
     <link rel="stylesheet" href="css/calendar.midnight-alchemy.css">
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
+    <link rel="stylesheet" href="css/calendar.midnight-elegance.css">
     <link rel="stylesheet" href="css/calendar.migratory-birds.css">
     <link rel="stylesheet" href="css/calendar.monochrome-ink.css">
     <link rel="stylesheet" href="css/calendar.moonlit-path.css">
@@ -486,6 +488,7 @@
                 <option value="blue-planet">Blue Planet</option>
                 <option value="blue-whale">Blue Whale</option>
                 <option value="blue-white">Blue & White</option>
+                <option value="breaking-point">Breaking Point</option>
                 <option value="bright-line">Bright Line</option>
                 <option value="bronze-horseman">Bronze Horseman</option>
                 <option value="cacao-plantation">Cacao Plantation</option>
@@ -585,6 +588,7 @@
                 <option value="melting-glaciers">Melting Glaciers</option>
                 <option value="midnight-alchemy">Midnight Alchemy</option>
                 <option value="midnight-train">Midnight Train</option>
+                <option value="midnight-elegance">Midnight Elegance</option>
                 <option value="migratory-birds">Migratory Birds</option>
                 <option value="monochrome-ink">Monochrome Ink</option>
                 <option value="moonlit-path">Moonlit Path</option>
