--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
     <link rel="stylesheet" href="css/calendar.ice-palace.css">
     <link rel="stylesheet" href="css/calendar.iceland-volcanoes.css">
     <link rel="stylesheet" href="css/calendar.imaginary-world.css">
+    <link rel="stylesheet" href="css/calendar.inspiration-line.css">
     <link rel="stylesheet" href="css/calendar.in-the-dusk.css">
     <link rel="stylesheet" href="css/calendar.intelligence-quotient.css">
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
@@ -566,6 +567,7 @@
                 <option value="ice-palace">Ice Palace</option>
                 <option value="iceland-volcanoes">Iceland’s Volcanoes</option>
                 <option value="imaginary-world">Imaginary World</option>
+                <option value="inspiration-line">Inspiration Line</option>
                 <option value="in-the-dusk">In the Dusk</option>
                 <option value="intelligence-quotient">Intelligence Quotient</option>
                 <option value="into-the-night">Into the Night</option>
