--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
     <link rel="stylesheet" href="css/calendar.neon-nights.css">
     <link rel="stylesheet" href="css/calendar.new-ai.css">
     <link rel="stylesheet" href="css/calendar.new-black.css">
+    <link rel="stylesheet" href="css/calendar.next-step.css">
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
     <link rel="stylesheet" href="css/calendar.night-dragon.css">
     <link rel="stylesheet" href="css/calendar.north-pole.css">
@@ -603,6 +604,7 @@
                 <option value="neon-nights">Neon Nights</option>
                 <option value="new-ai">New AI</option>
                 <option value="new-black">New Black</option>
+                <option value="next-step">Next Step</option>
                 <option value="niagara-falls">Niagara Falls</option>
                 <option value="night-dragon">Night Dragon</option>
                 <option value="north-pole">North Pole</option>
