--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
     <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
     <link rel="stylesheet" href="css/calendar.best-practice.css">
+    <link rel="stylesheet" href="css/calendar.black-bird.css">
     <link rel="stylesheet" href="css/calendar.black-coffee.css">
     <link rel="stylesheet" href="css/calendar.black-fashion.css">
     <link rel="stylesheet" href="css/calendar.black-hacker.css">
@@ -479,6 +480,7 @@
                 <option value="battle-of-the-ice">Battle of the Ice</option>
                 <option value="bermuda-triangle">Bermuda Triangle</option>
                 <option value="best-practice">Best Practice</option>
+                <option value="black-bird">Black Bird</option>
                 <option value="black-coffee">Black Coffee</option>
                 <option value="black-fashion">Black Fashion</option>
                 <option value="black-hacker">Black Hacker</option>
