--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <link rel="stylesheet" href="css/calendar.genghis-khan-arrow.css">
     <link rel="stylesheet" href="css/calendar.giant-petrel.css">
     <link rel="stylesheet" href="css/calendar.golden-coast.css">
+    <link rel="stylesheet" href="css/calendar.golden-eagle.css">
     <link rel="stylesheet" href="css/calendar.golden-gate.css">
     <link rel="stylesheet" href="css/calendar.golden-horizon.css">
     <link rel="stylesheet" href="css/calendar.grand-prix.css">
@@ -550,6 +551,7 @@
                 <option value="genghis-khan-arrow">Genghis Khan's Arrow</option>
                 <option value="giant-petrel">Giant Petrel</option>
                 <option value="golden-coast">Gold Coast</option>
+                <option value="golden-eagle">Golden Eagle</option>
                 <option value="golden-gate">Golden Gate</option>
                 <option value="golden-horizon">Golden Horizon</option>
                 <option value="grand-prix">Grand Prix</option>
