--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <link rel="stylesheet" href="css/calendar.divi-divi-trees.css">
     <link rel="stylesheet" href="css/calendar.doterra-black.css">
     <link rel="stylesheet" href="css/calendar.doterra-colors.css">
+    <link rel="stylesheet" href="css/calendar.doterra-green.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
@@ -527,6 +528,7 @@
                 <option value="distant-skies">Distant Skies</option>
                 <option value="doterra-black">doTERRA Black</option>
                 <option value="doterra-colors">doTERRA Colors</option>
+                <option value="doterra-green">doTERRA Green</option>
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="dragonfly">Dragonfly</option>
                 <option value="emerald-stream">Emerald Stream</option>
