--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/calendar.alpine-landscape.css">
     <link rel="stylesheet" href="css/calendar.amazon-dolphin.css">
     <link rel="stylesheet" href="css/calendar.amazon-river.css">
+    <link rel="stylesheet" href="css/calendar.andromeda-galaxy.css">
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
     <link rel="stylesheet" href="css/calendar.arctic-snowfall.css">
@@ -473,6 +474,7 @@
                 <option value="alpine-landscape">Alpine Landscape</option>
                 <option value="amazon-dolphin">Amazon Dolphin</option>
                 <option value="amazon-river">Amazon River</option>
+                <option value="andromeda-galaxy">Andromeda Galaxy</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
                 <option value="arctic-glow">Arctic Glow</option>
                 <option value="arctic-snowfall">Arctic Snowfall</option>
