--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
     <link rel="stylesheet" href="css/calendar.strategic-advantage.css">
+    <link rel="stylesheet" href="css/calendar.strategic-planning.css">
     <link rel="stylesheet" href="css/calendar.success-motivation.css">
     <link rel="stylesheet" href="css/calendar.sword-of-fate.css">
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
@@ -661,6 +662,7 @@
                 <option value="steel-shadows">Steel Shadows</option>
                 <option value="stockholm-roofs">Stockholm Roofs</option>
                 <option value="strategic-advantage">Strategic Advantage</option>
+                <option value="strategic-planning">Strategic Planning</option>
                 <option value="success-motivation">Success Motivation</option>
                 <option value="sword-of-fate">Sword of Fate</option>
                 <option value="tactical-advantage">Tactical Advantage</option>
