--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <link rel="stylesheet" href="css/calendar.continuous-growth.css">
     <link rel="stylesheet" href="css/calendar.coral-reef.css">
     <link rel="stylesheet" href="css/calendar.cosmic-nebula.css">
+    <link rel="stylesheet" href="css/calendar.cosmic-perspective.css">
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
     <link rel="stylesheet" href="css/calendar.critical-thinking.css">
@@ -516,6 +517,7 @@
                 <option value="continuous-growth">Continuous Growth</option>
                 <option value="coral-reef">Coral Reef</option>
                 <option value="cosmic-nebula">Cosmic Nebula</option>
+                <option value="cosmic-perspective">Cosmic Perspective</option>
                 <option value="cracked-ice">Cracked Ice</option>
                 <option value="crimson-sky">Crimson Sky</option>
                 <option value="critical-thinking">Critical Thinking</option>
