--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
     <link rel="stylesheet" href="css/calendar.best-practice.css">
     <link rel="stylesheet" href="css/calendar.best-response.css">
+    <link rel="stylesheet" href="css/calendar.big-fashion.css">
     <link rel="stylesheet" href="css/calendar.black-bird.css">
     <link rel="stylesheet" href="css/calendar.black-coffee.css">
     <link rel="stylesheet" href="css/calendar.black-fashion.css">
@@ -488,6 +489,7 @@
                 <option value="bermuda-triangle">Bermuda Triangle</option>
                 <option value="best-practice">Best Practice</option>
                 <option value="best-response">Best Response</option>
+                <option value="big-fashion">Big Fashion</option>
                 <option value="black-bird">Black Bird</option>
                 <option value="black-coffee">Black Coffee</option>
                 <option value="black-fashion">Black Fashion</option>
