--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
     <link rel="stylesheet" href="css/calendar.lemongrass-sky.css">
     <link rel="stylesheet" href="css/calendar.life-quality.css">
+    <link rel="stylesheet" href="css/calendar.limited-edition.css">
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
     <link rel="stylesheet" href="css/calendar.logical-intelligence.css">
     <link rel="stylesheet" href="css/calendar.love-station.css">
@@ -595,6 +596,7 @@
                 <option value="lavender-bliss">Lavender Bliss</option>
                 <option value="lemongrass-sky">Lemongrass Sky</option>
                 <option value="life-quality">Life Quality</option>
+                <option value="limited-edition">Limited Edition</option>
                 <option value="lions-mane">Lion's Mane</option>
                 <option value="logical-intelligence">Logical Intelligence</option>
                 <option value="love-station">Love Station</option>
