--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
     <link rel="stylesheet" href="css/calendar.rain-waltz.css">
     <link rel="stylesheet" href="css/calendar.red-lake.css">
     <link rel="stylesheet" href="css/calendar.red-squirrel.css">
+    <link rel="stylesheet" href="css/calendar.remote-island.css">
     <link rel="stylesheet" href="css/calendar.rising-sun.css">
     <link rel="stylesheet" href="css/calendar.robin-good.css">
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
@@ -652,6 +653,7 @@
                 <option value="rain-waltz">Rain Waltz</option>
                 <option value="red-lake">Red Lake</option>
                 <option value="red-squirrel">Red Squirrel</option>
+                <option value="remote-island">Remote Island</option>
                 <option value="rising-sun">Rising Sun</option>
                 <option value="robin-good">Robin Good</option>
                 <option value="royal-caribbean">Royal Caribbean</option>
