--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <link rel="stylesheet" href="css/calendar.exotic-island.css">
     <link rel="stylesheet" href="css/calendar.expedient-path.css">
     <link rel="stylesheet" href="css/calendar.exponential-acceleration.css">
+    <link rel="stylesheet" href="css/calendar.extraordinary-achievement.css">
     <link rel="stylesheet" href="css/calendar.fast-track.css">
     <link rel="stylesheet" href="css/calendar.fiji-islands.css">
     <link rel="stylesheet" href="css/calendar.finish-line.css">
@@ -549,8 +550,9 @@
                 <option value="everest-view">Everest View</option>
                 <option value="executive-management">Executive Management</option>
                 <option value="exotic-island">Exotic Island</option>
-                <option value="exponential-acceleration">Exponential Acceleration</option>
                 <option value="expedient-path">Expedient Path</option>
+                <option value="exponential-acceleration">Exponential Acceleration</option>
+                <option value="extraordinary-achievement">Extraordinary Achievement</option>
                 <option value="fast-track">Fast Track</option>
                 <option value="fiji-islands">Fiji Islands</option>
                 <option value="finish-line">Finish Line</option>
