--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
     <link rel="stylesheet" href="css/calendar.love-station.css">
     <link rel="stylesheet" href="css/calendar.lucid-dream.css">
     <link rel="stylesheet" href="css/calendar.lunar-eclipse.css">
+    <link rel="stylesheet" href="css/calendar.luxury-design.css">
     <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
     <link rel="stylesheet" href="css/calendar.magellanic-penguin.css">
     <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
@@ -605,6 +606,7 @@
                 <option value="love-station">Love Station</option>
                 <option value="lucid-dream">Lucid Dream</option>
                 <option value="lunar-eclipse">Lunar Eclipse</option>
+                <option value="luxury-design">Luxury Design</option>
                 <option value="macaroni-penguin">Macaroni Penguin</option>
                 <option value="magellanic-penguin">Magellanic Penguin</option>
                 <option value="mammoth-tusk">Mammoth Tusk</option>
