--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <link rel="stylesheet" href="css/calendar.deep-forest.css">
     <link rel="stylesheet" href="css/calendar.deep-ocean.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
+    <link rel="stylesheet" href="css/calendar.diamond-planet.css">
     <link rel="stylesheet" href="css/calendar.distant-skies.css">
     <link rel="stylesheet" href="css/calendar.divi-divi-trees.css">
     <link rel="stylesheet" href="css/calendar.doterra-black.css">
@@ -538,6 +539,7 @@
                 <option value="deep-forest">Deep Forest</option>
                 <option value="deep-ocean">Deep Ocean</option>
                 <option value="desert-mirage">Desert Mirage</option>
+                <option value="diamond-planet">Diamond Planet</option>
                 <option value="divi-divi-trees">Divi-divi Trees</option>
                 <option value="distant-skies">Distant Skies</option>
                 <option value="doterra-black">doTERRA Black</option>
