--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
     <link rel="stylesheet" href="css/calendar.formula-one.css">
     <link rel="stylesheet" href="css/calendar.free-flight.css">
+    <link rel="stylesheet" href="css/calendar.fresh-start.css">
     <link rel="stylesheet" href="css/calendar.frozen-wilderness.css">
     <link rel="stylesheet" href="css/calendar.full-pink-moon.css">
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
@@ -564,6 +565,7 @@
                 <option value="forgotten-dreams">Forgotten Dreams</option>
                 <option value="formula-one">Formula One</option>
                 <option value="free-flight">Free Flight</option>
+                <option value="fresh-start">Fresh Start</option>
                 <option value="frozen-wilderness">Frozen Wilderness</option>
                 <option value="full-pink-moon">Full Pink Moon</option>
                 <option value="galactic-glow">Galactic Glow</option>
