--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
     <link rel="stylesheet" href="css/calendar.polar-bear.css">
     <link rel="stylesheet" href="css/calendar.porcupine-quill.css">
     <link rel="stylesheet" href="css/calendar.port-victoria.css">
+    <link rel="stylesheet" href="css/calendar.positive-energy.css">
     <link rel="stylesheet" href="css/calendar.practical-experience.css">
     <link rel="stylesheet" href="css/calendar.precious-question.css">
     <link rel="stylesheet" href="css/calendar.pure-light.css">
@@ -649,6 +650,7 @@
                 <option value="polar-bear">Polar Bear</option>
                 <option value="porcupine-quill">Porcupine Quill</option>
                 <option value="port-victoria">Port Victoria</option>
+                <option value="positive-energy">Positive Energy</option>
                 <option value="practical-experience">Practical Experience</option>
                 <option value="precious-question">Precious Question</option>
                 <option value="pure-light">Pure Light</option>
