--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
     <link rel="stylesheet" href="css/calendar.high-speed-rail.css">
     <link rel="stylesheet" href="css/calendar.high-speed-train.css">
     <link rel="stylesheet" href="css/calendar.high-style.css">
+    <link rel="stylesheet" href="css/calendar.hometown-vibes.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
     <link rel="stylesheet" href="css/calendar.hyperloop.css">
     <link rel="stylesheet" href="css/calendar.ice-palace.css">
@@ -590,6 +591,7 @@
                 <option value="high-speed-rail">High-Speed Rail</option>
                 <option value="high-speed-train">High-Speed Train</option>
                 <option value="high-style">High Style</option>
+                <option value="hometown-vibes">Hometown Vibes</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
                 <option value="hyperloop">Hyperloop</option>
                 <option value="ice-palace">Ice Palace</option>
