--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
     <link rel="stylesheet" href="css/calendar.secretive-ninja.css">
     <link rel="stylesheet" href="css/calendar.selfless-programmer.css">
     <link rel="stylesheet" href="css/calendar.serene-shores.css">
+    <link rel="stylesheet" href="css/calendar.shades-of-blue.css">
     <link rel="stylesheet" href="css/calendar.shaolin-monastery.css">
     <link rel="stylesheet" href="css/calendar.shift-in-perception.css">
     <link rel="stylesheet" href="css/calendar.silicon-valley.css">
@@ -676,6 +677,7 @@
                 <option value="secretive-ninja">Secretive Ninja</option>
                 <option value="selfless-programmer">Selfless Programmer</option>
                 <option value="serene-shores">Serene Shores</option>
+                <option value="shades-of-blue">Shades Of Blue</option>
                 <option value="shaolin-monastery">Shaolin Monastery</option>
                 <option value="shift-in-perception">Shift in Perception</option>
                 <option value="silicon-valley">Silicon Valley</option>
