--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="css/calendar.arctic-snowfall.css">
     <link rel="stylesheet" href="css/calendar.art-studio.css">
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
+    <link rel="stylesheet" href="css/calendar.away-from-home.css">
     <link rel="stylesheet" href="css/calendar.bamboo-flute.css">
     <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
     <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
@@ -494,6 +495,7 @@
                 <option value="arctic-snowfall">Arctic Snowfall</option>
                 <option value="art-studio">Art Studio</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
+                <option value="away-from-home">Away From Home</option>
                 <option value="bamboo-flute">Bamboo Flute</option>
                 <option value="battle-of-the-ice">Battle of the Ice</option>
                 <option value="bermuda-triangle">Bermuda Triangle</option>
