--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <link rel="stylesheet" href="css/calendar.divi-divi-trees.css">
     <link rel="stylesheet" href="css/calendar.doterra-black.css">
     <link rel="stylesheet" href="css/calendar.doterra-colors.css">
+    <link rel="stylesheet" href="css/calendar.doterra-gold.css">
     <link rel="stylesheet" href="css/calendar.doterra-green.css">
     <link rel="stylesheet" href="css/calendar.doterra-new.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
@@ -553,6 +554,7 @@
                 <option value="distant-skies">Distant Skies</option>
                 <option value="doterra-black">doTERRA Black</option>
                 <option value="doterra-colors">doTERRA Colors</option>
+                <option value="doterra-gold">doTERRA Gold</option>
                 <option value="doterra-green">doTERRA Green</option>
                 <option value="doterra-new">doTERRA New</option>
                 <option value="dragon-flame">Dragon Flame</option>
