--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
     <link rel="stylesheet" href="css/calendar.technological-might.css">
+    <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
     <link rel="stylesheet" href="css/calendar.time-complexity.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
@@ -704,6 +705,7 @@
                 <option value="tactical-advantage">Tactical Advantage</option>
                 <option value="tactical-command">Tactical Command</option>
                 <option value="technological-might">Technological Might</option>
+                <option value="the-dead-sea">The Dead Sea</option>
                 <option value="the-last-mohican">The Last Mohican</option>
                 <option value="samurai-path">The Samurai's Path</option>
                 <option value="time-complexity">Time Complexity</option>
