--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/calendar.adelaide-skyline.css">
     <link rel="stylesheet" href="css/calendar.adriatic-sea.css">
     <link rel="stylesheet" href="css/calendar.aloe-vera.css">
+    <link rel="stylesheet" href="css/calendar.alpha-centauri.css">
     <link rel="stylesheet" href="css/calendar.alpine-landscape.css">
     <link rel="stylesheet" href="css/calendar.amazon-dolphin.css">
     <link rel="stylesheet" href="css/calendar.amazon-river.css">
@@ -492,6 +493,7 @@
                 <option value="adelaide-skyline">Adelaide's Skyline</option>
                 <option value="adriatic-sea">Adriatic Sea</option>
                 <option value="aloe-vera">Aloe Vera</option>
+                <option value="alpha-centauri">Alpha Centauri</option>
                 <option value="alpine-landscape">Alpine Landscape</option>
                 <option value="amazon-dolphin">Amazon Dolphin</option>
                 <option value="amazon-river">Amazon River</option>
