--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     <link rel="stylesheet" href="css/calendar.positive-energy.css">
     <link rel="stylesheet" href="css/calendar.practical-experience.css">
     <link rel="stylesheet" href="css/calendar.precious-question.css">
+    <link rel="stylesheet" href="css/calendar.progressive-decision.css">
     <link rel="stylesheet" href="css/calendar.pure-light.css">
     <link rel="stylesheet" href="css/calendar.purple-fog.css">
     <link rel="stylesheet" href="css/calendar.quantum-programmer.css">
@@ -672,6 +673,7 @@
                 <option value="positive-energy">Positive Energy</option>
                 <option value="practical-experience">Practical Experience</option>
                 <option value="precious-question">Precious Question</option>
+                <option value="progressive-decision">Progressive Decision</option>
                 <option value="pure-light">Pure Light</option>
                 <option value="purple-fog">Purple Fog</option>
                 <option value="quantum-programmer">Quantum Programmer</option>
