--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
     <link rel="stylesheet" href="css/calendar.rainbow-dream.css">
     <link rel="stylesheet" href="css/calendar.rainforest-jungle.css">
     <link rel="stylesheet" href="css/calendar.rain-waltz.css">
+    <link rel="stylesheet" href="css/calendar.random-coincidence.css">
     <link rel="stylesheet" href="css/calendar.red-lake.css">
     <link rel="stylesheet" href="css/calendar.red-squirrel.css">
     <link rel="stylesheet" href="css/calendar.remote-island.css">
@@ -682,6 +683,7 @@
                 <option value="rainbow-dream">Rainbow Dream</option>
                 <option value="rainforest-jungle">Rainforest Jungle</option>
                 <option value="rain-waltz">Rain Waltz</option>
+                <option value="random-coincidence">Random Coincidence</option>
                 <option value="red-lake">Red Lake</option>
                 <option value="red-squirrel">Red Squirrel</option>
                 <option value="remote-island">Remote Island</option>
