--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
+    <link rel="stylesheet" href="css/calendar.blue-stars.css">
     <link rel="stylesheet" href="css/calendar.blue-whale.css">
     <link rel="stylesheet" href="css/calendar.blue-white.css">
     <link rel="stylesheet" href="css/calendar.breaking-point.css">
@@ -65,6 +66,7 @@
     <link rel="stylesheet" href="css/calendar.caribbean-sea.css">
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
     <link rel="stylesheet" href="css/calendar.clean-energy.css">
+    <link rel="stylesheet" href="css/calendar.collaboration-idea.css">
     <link rel="stylesheet" href="css/calendar.competitive-advantage.css">
     <link rel="stylesheet" href="css/calendar.continuous-growth.css">
     <link rel="stylesheet" href="css/calendar.coral-reef.css">
@@ -132,6 +134,7 @@
     <link rel="stylesheet" href="css/calendar.guangzhou-lights.css">
     <link rel="stylesheet" href="css/calendar.heavy-rain.css">
     <link rel="stylesheet" href="css/calendar.hidden-trail.css">
+    <link rel="stylesheet" href="css/calendar.high-intelligence.css">
     <link rel="stylesheet" href="css/calendar.high-performance.css">
     <link rel="stylesheet" href="css/calendar.high-speed-rail.css">
     <link rel="stylesheet" href="css/calendar.high-speed-train.css">
@@ -525,6 +528,7 @@
                 <option value="blue-bird">Blue Bird</option>
                 <option value="blue-ice">Blue Ice</option>
                 <option value="blue-planet">Blue Planet</option>
+                <option value="blue-stars">Blue Stars</option>
                 <option value="blue-whale">Blue Whale</option>
                 <option value="blue-white">Blue & White</option>
                 <option value="breaking-point">Breaking Point</option>
@@ -538,6 +542,7 @@
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="cinnamon-street">Cinnamon Street</option>
                 <option value="clean-energy">Clean Energy</option>
+                <option value="collaboration-idea">Collaboration Idea</option>
                 <option value="competitive-advantage">Competitive Advantage</option>
                 <option value="continuous-growth">Continuous Growth</option>
                 <option value="coral-reef">Coral Reef</option>
@@ -605,6 +610,7 @@
                 <option value="guangzhou-lights">Guangzhou Lights</option>
                 <option value="heavy-rain">Heavy Rain</option>
                 <option value="hidden-trail">Hidden Trail</option>
+                <option value="high-intelligence">High Intelligence</option>
                 <option value="high-performance">High Performance</option>
                 <option value="high-speed-rail">High-Speed Rail</option>
                 <option value="high-speed-train">High-Speed Train</option>
