--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -123,6 +123,7 @@
     <link rel="stylesheet" href="css/calendar.golden-eagle.css">
     <link rel="stylesheet" href="css/calendar.golden-gate.css">
     <link rel="stylesheet" href="css/calendar.golden-horizon.css">
+    <link rel="stylesheet" href="css/calendar.golden-opportunity.css">
     <link rel="stylesheet" href="css/calendar.grand-prix.css">
     <link rel="stylesheet" href="css/calendar.great-idea.css">
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
@@ -599,6 +600,7 @@
                 <option value="golden-eagle">Golden Eagle</option>
                 <option value="golden-gate">Golden Gate</option>
                 <option value="golden-horizon">Golden Horizon</option>
+                <option value="golden-opportunity">Golden Opportunity</option>
                 <option value="grand-prix">Grand Prix</option>
                 <option value="great-idea">Great Idea</option>
                 <option value="great-lakes">Great Lakes</option>
